<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="jp.co.yumemi.android.code_check.model.dataClass.Item" />
        <variable
            name="date"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/owner_icon_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:contentDescription="@null"
            android:src="@drawable/jetbrains"
            app:loadImage="@{item.owner.avatarUrl}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="240dp" />

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text='@{item.fullName, default="JetBrains/kotlin" }'
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/owner_icon_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/language_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/written_language(item.language), default="Written in Kotlin" }'
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_view"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/stars_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/stars(item.stargazersCount), default ="38530 stars" }'
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/center_guide"
            app:layout_constraintTop_toBottomOf="@id/name_view" />

        <TextView
            android:id="@+id/watchers_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/watchers(item.watchersCount), default ="38530 watchers" }'
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/center_guide"
            app:layout_constraintTop_toBottomOf="@id/stars_view" />

        <TextView
            android:id="@+id/forks_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/forks(item.forksCount), default ="4675 forks" }'
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/center_guide"
            app:layout_constraintTop_toBottomOf="@id/watchers_view" />

        <TextView
            android:id="@+id/open_issues_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/open_issues(item.openIssuesCount), default ="131 open issues" }'
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/center_guide"
            app:layout_constraintTop_toBottomOf="@id/forks_view" />

        <TextView
            android:id="@+id/last_search_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text='@{@string/last_search_date(date), default ="検索した日時: 2024/04/05/ 午後0:00:00"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open_issues_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
