<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    app:layout_constraintBottom_toTopOf="@id/recycler_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="@style/TextInputLayoutNoBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        app:endIconMode="clear_text"
        app:endIconTint="@android:color/darker_gray"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@android:drawable/ic_menu_search"
        app:startIconTint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/search_input_text_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


</com.google.android.material.card.MaterialCardView>